bugfix/refactored-scrollbar

--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,5 +1,5 @@
 .cover__overlay {
-  max-width: 100%;
+  width: 100%;
   max-height: 100%;
   margin: 0px;
   padding: 0px;
