--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -29,7 +29,7 @@
 
 @media screen and (min-width: 1280px) {
   .header {
-    min-width: 1184px;
+    max-width: 1184px;
     margin: 0px auto;
   }
 }
