--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,8 @@
 .lead__image {
+  width: 100%;
   margin: 40px 0px 0px;
   padding: 0px;
+  object-fit: cover;
   transition: margin .4s ease-in-out;
 }
 
