--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,4 @@
 .lead {
-  width: 100%;
   max-width: 928px;
   max-height: 1005px;
   margin: 48px 0px 0px;
